force-app/main/default/objects/Opportunity/fields/Netsuite_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Id__c</fullName>
    <label>Netsuite ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>