force-app/main/default/objects/Opportunity/fields/NS_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>NS_Sync_Error__c</fullName>
    <label>NetSuite Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>